--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/form.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/form.html.twig
@@ -58,6 +58,14 @@
             });
             jQuery("#produto_valor").maskMoney({thousands:'.', decimal:','});
             jQuery("#produto_valor").maskMoney("mask");
+            jQuery("#produto_peso").maskMoney({thousands:'', decimal:'.'});
+            jQuery("#produto_peso").maskMoney("mask");
+            jQuery("#produto_largura").maskMoney({thousands:'', decimal:'.'});
+            jQuery("#produto_largura").maskMoney("mask");
+            jQuery("#produto_comprimento").maskMoney({thousands:'', decimal:'.'});
+            jQuery("#produto_comprimento").maskMoney("mask");
+            jQuery("#produto_altura").maskMoney({thousands:'', decimal:'.'});
+            jQuery("#produto_altura").maskMoney("mask");
             
             Dropzone.autoDiscover = false;                
             Dropzone.confirm = function(question, accepted, rejected) {
@@ -150,6 +158,11 @@
                         {{ form_row(form.nome) }}
                         {{ form_row(form.descricao) }}
                         {{ form_row(form.valor) }}
+                        {{ form_row(form.peso) }}
+                        {{ form_row(form.largura) }}
+                        {{ form_row(form.comprimento) }}
+                        {{ form_row(form.altura) }}
+                        {{ form_row(form.tipoEmbalagem) }}
                         {{ form_row(form.categoria) }}
                         {{ form_row(form.destaqueCategoria) }}
                         {{ form_row(form.desconto) }}
