Ajustes de multiplas categorias por produtos e Ajustes da Home Layout novo

--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Form/fields.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Form/fields.html.twig
@@ -1,3 +1,15 @@
+{% block _produto_categorias_widget %}
+{% spaceless %}
+    {% if expanded %}
+        <div>
+        {% for child in form %}
+            {{ form_widget(child) }}
+        {% endfor %}
+        </div>
+    {% endif %}
+{% endspaceless %}
+{% endblock _produto_categorias_widget %}
+
 {% block _banner_ativo_widget %}
 {% spaceless %}
     {% if expanded %}
