--- a/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Admin/Produto/index.html.twig
@@ -68,7 +68,7 @@
                 <thead>
                     <tr>
                         <th>Nome</th>
-                        <th>Categoria</th>
+                        <th>Categorias</th>
                         <th>Ativo</th>
                         <th></th>
                     </tr>
