--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/menu.html.twig
@@ -1,11 +1,13 @@
 <ul class="nav navbar-nav">
     <li class="active"> <a href="{{ path('_loja_index') }}"> home </a> </li>
     <li> <a href="{{ path('_loja_empresa') }}"> sobre a nutrivida </a> </li>
-    <li class="dropdown megamenu-fullwidth"> 
+    <li class="dropdown"> 
         <a data-toggle="dropdown" class="dropdown-toggle" href="#"> produtos <b class="caret"> </b> </a>
-        <ul style="display: none">
+        <ul class="dropdown-menu">
             {% for categoria in categorias %}
-            <li><a href="{{ path('_loja_categoria', {slug: categoria.getSlug}) }}">{{ categoria.getNome }}</a></li>
+            <li> 
+                <a href="{{ path('_loja_categoria', {slug: categoria.getSlug}) }}"> {{ categoria.nome }} </a> 
+            </li>
             {% endfor %}
         </ul>
     </li>
