--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Contato/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Contato/index.html.twig
@@ -6,55 +6,74 @@
 
 
 {% block content %}
-        <ul class="breadcrumbs">
-            <div class="container">
-                <li class="home">
-                    <a href="{{ path('_loja_index') }}" title="Go to Home Page"><img src="{{ asset('bundles/nutrividaloja/loja/images/home.png') }}" alt=""/></a>&nbsp;&nbsp;
-                    <span>&gt;</span>&nbsp;
-                </li>
-                <li class="home">
-                    NutriVida&nbsp; 
-                    <span>&gt;</span>
-                </li>
-                <li class="home">
-                    <span class="red"> &nbsp;Contato&nbsp;</span>
-                </li>
+    
+        <div class="parallaxOffset no-padding fixedContent contact-intro">
+            <div class="w100 map">
+                <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3455.5107187379094!2d-50.1419161!3d-29.993488400000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951873279a852c61%3A0x365a022bba61eee!2zQXYuIEVtYW5jaXBhw6fDo28sIDEzODAsIFRyYW1hbmRhw60gLSBSUywgOTU1OTAtMDAw!5e0!3m2!1spt-BR!2sbr!4v1419872286996">
+                </iframe>
             </div>
-        </ul>
-        <div class="contact">
-            <div class="container">
-                <div class="contact_top">
-                    <div class="col-md-3 contact_left">
-                        <div class="contact_grid contact_address">
-                            <h3>Endereço</h3>
-                            <p>Av. Emancipação, 1380 Sala 4</p>
-                            <p>Tramandaí / RS</p>
-                            <p>95.590-000</p>
-                            <p>+55 51 3661.4734</p>
-                            <p><a href="malito:lojanutrivida@live.com">lojanutrivida@live.com</a></p>
-                        </div>
+        </div><!--/.contact-intro || map end-->
+        <div class="wrapper whitebg contact-us">
+            <div class="container main-container ">
+                <div class="row innerPage">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="row userInfo">
+                            <div class="col-xs-12 col-sm-12">
+                                <h1 class="title-big text-center section-title-style2">
+                                    <span> Contato </span>
+                                </h1>
+                                <div class="row">
+                                    <form method="post" action="#">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Nome">
+                                            <input type="text" class="form-control" placeholder="E-mail">
+                                            <textarea class="form-control" placeholder="Mensagem"></textarea>
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn   btn-primary">Enviar</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                        <h3 class="block-title-5">
+                                            Loja física 
+                                        </h3>
+                                        <p>
+                                            <strong>
+                                                Endereço
+                                            </strong>
+                                            :   Av. Emancipação, 1380 Sala 4 - Tramandaí / RS - 95.590-000
+                                            <br>
+                                            <strong>
+                                                Telefone
+                                            </strong>
+                                            : 	+55 51 3661.4734
+                                            <br>
+                                            <strong>
+                                                E-mail
+                                            </strong>
+                                            : 	<a href="malito:lojanutrivida@live.com">lojanutrivida@live.com</a>
+                                        </p>
+                                    </div>
+                                    <div style="clear:both"> </div>
+
+                                </div><!--/.row-->
+                            </div>
+
+
+
+
+
+
+                        </div> <!--/.row  ||  -->
+
                     </div>
-                    <div class="col-md-9">
-                        <div class="contact-form">
-                            <form method="post" action="#">
-                                <input type="text" class="textbox" value="Nome" onfocus="this.value = '';" onblur="if (this.value == '') {
-                                                      this.value = 'Nome';
-                                                  }">
-                                <input type="text" class="textbox" value="E-mail" onfocus="this.value = '';" onblur="if (this.value == '') {
-                                                      this.value = 'E-mail';
-                                                  }">
-                                <textarea value="Mensagem" onfocus="this.value = '';" onblur="if (this.value == '') {
-                                                      this.value = 'Mensagem';
-                                                  }">Mensagem</textarea>
-                                <input type="submit" value="enviar">
-                            </form>
-                        </div>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3455.5107187379094!2d-50.1419161!3d-29.993488400000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951873279a852c61%3A0x365a022bba61eee!2zQXYuIEVtYW5jaXBhw6fDo28sIDEzODAsIFRyYW1hbmRhw60gLSBSUywgOTU1OTAtMDAw!5e0!3m2!1spt-BR!2sbr!4v1419872286996" width="100%" height="300" frameborder="0" style="border:0"></iframe>
-                </div>
-            </div>
-        </div>
+                </div>  <!--/row || innerPage end-->
+                <div style="clear:both"> </div>
+            </div><!-- ./main-container -->
+            <div class="gap"></div>
+        </div><!-- /main-container -->
+    
 {% endblock %}
