--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Empresa/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Empresa/index.html.twig
@@ -6,35 +6,32 @@
 
 
 {% block content %}
-    <ul class="breadcrumbs">
-        <div class="container">
-            <li class="home">
-                <a href="{{ path('_loja_index') }}" title="Go to Home Page"><img src="{{ asset('bundles/nutrividaloja/loja/images/home.png') }}" alt=""/></a>&nbsp;&nbsp;
-                <span>&gt;</span>&nbsp;
-            </li>
-            <li class="home">
-                NutriVida&nbsp; 
-                <span>&gt;</span>
-            </li>
-            <li class="home">
-                    <span class="red"> &nbsp;Sobre a NutriVida&nbsp;</span>
-            </li>
-        </div>
-    </ul>
-    <div class="contact">
-        <div class="container">
-            <div class="contact_top">
-                <div class="col-md-12 contact_left">
-                    <div class="contact_grid contact_address">
-                        <h3>{{ empresa.nome }}</h3>
-                        <img src="{% path empresa.getImagens.get(0).media, 'big' %}" class="img-responsive" alt=""/>
-                        <p>
-                            {{ empresa.descricao|raw }}
-                        </p>
-                    </div>
+
+        <div class="container main-container sobre">
+
+            <div class="row innerPage">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="row userInfo">
+                        <div class="col-xs-12 col-sm-12">
+                            <h1 class="title-big text-center section-title-style2">
+                                <span >
+                                    Sobre nós
+                                </span>
+                            </h1>
+                            
+
+                            <h2>{{ empresa.nome }}</h2>
+                            <p class="lead text-center">
+                                {{ empresa.descricao|raw }}
+                            </p>
+                            <hr class="hr hr30">                            
+                            <img src="{% path empresa.getImagens.get(0).media, 'big' %}" class="img-responsive" alt=""/>
+                            <hr>
+                        </div>
+                    </div>  <!--/row end-->
                 </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
+            </div> <!--/.innerPage-->
+            <div style="clear:both">  </div>
+        </div><!-- /.main-container -->
+
 {% endblock %}
