--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Produto/index.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Produto/index.html.twig
@@ -1,30 +1,186 @@
 {% extends "NutrividaLojaBundle:Loja:layout.html.twig" %}
 {% block title %}Nutrivida Tramandaí RS{% endblock %}
 {% block head %}
-    <link rel="stylesheet" href="{{ asset('bundles/nutrividaloja/loja/css/etalage.css') }}">
-    <script src="{{ asset('bundles/nutrividaloja/loja/js/jquery.etalage.min.js') }}"></script>
-    <script>
-        jQuery(document).ready(function($){
-            jQuery('#etalage').etalage({
-                thumb_image_width: 260,
-                thumb_image_height: 330,
-                source_image_width: 510,
-                source_image_height: 660,
-                show_hint: true,
-                click_callback: function(image_anchor, instance_id){
-                        alert('Callback example:\nYou clicked on an image with the anchor: "'+image_anchor+'"\n(in Etalage instance: "'+instance_id+'")');
-                }
-            });
-        });
-    </script>
-
 {% endblock %}
 
 
 {% block content %}
     
+            <div class="container main-container headerOffset">
+            <div class="row">
+                <div class="breadcrumbDiv col-lg-12">
+                    <ul class="breadcrumb">
+                        <li> <a href="{{ path('_loja_index') }}">Home</a> </li>
+                        <li> <a href="{{ path('_loja_categoria', {slug: categoria.getSlug}) }}">{{ categoria.nome }}</a> </li>
+                        <li>{{ produto.nome }} </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row transitionfx">
+
+                <!-- left column -->
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <!-- product Image and Zoom -->
+                    <div class="main-image sp-wrap col-lg-12 no-padding style2 style2look2"> 
+                        {% for imagem in produto.getImagens %}
+                            <a href="{% path imagem.media, 'big' %}"><img src="{% path imagem.media, 'produto' %}" class="img-responsive" alt="img"></a> 
+                        {% endfor %}
+                    </div>
+                </div><!--/ left column end -->
+                <!-- right column -->
+                <div class="col-lg-6 col-md-6 col-sm-5">
+
+                    <h1 class="product-title"> {{ produto.nome }}</h1>
+                    <div class="product-price"> 
+                        <span class="price-sales"> R${{ produto.valor|number_format(2, ',', '.') }}</span> 
+                        <span class="price-standard">R${{ (produto.valor*1.1)|number_format(2, ',', '.') }}</span> 
+                    </div>
+
+                    <div class="details-description">
+                        <p>100% natural!</p>
+                    </div>
+
+                    <div class="productFilter productFilterLook2">
+                        <div class="filterBox">
+                            <select>
+                                <option value="strawberries" selected>Quantidade</option>
+                                <option value="mango">1</option>
+                                <option value="bananas">2</option>
+                                <option value="watermelon">3</option>
+                                <option value="grapes">4</option>
+                                <option value="oranges">5</option>
+                                <option value="pineapple">6</option>
+                                <option value="peaches">7</option>
+                                <option value="cherries">8</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="cart-actions">
+                        <div class="addto">
+                            <button onclick="productAddToCartForm.submit(this);" class="button btn-cart cart first" title="Adicionar ao Carrinho" type="button">adicionar carrinho</button>
+                            <button onclick="productAddToCartForm.submit(this);" class="button btn-cart cart first" title="Finalizar Pedido" type="button">finalizar pedido</button>
+                        </div>
+
+                        <div style="clear:both"></div>
+                    </div>
+
+                    <div class="clear"></div>
+
+                    <div class="product-tab w100 clearfix">
+
+                        <ul class="nav nav-tabs">
+                            <li class="active"><a href="#details" data-toggle="tab">Detalhe</a></li>
+                        </ul>
+
+                        <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div class="tab-pane active" id="details">
+                                <p>A bebida de castanhas a Tal da Castanha é fonte de proteínas vegetais de alta qualidade, rica em vitaminas e minerais. Por ser zero lactose, glúten e soja, é uma excelente alternativa para intolerantes e também para veganos, vegetarianos, pessoas que procuram diminuir o consumo de produtos de origem animal ou simplesmente para quem ama castanhas.
+                                Sem adição de açúcares, conservadores, corantes ou aromatizantes.</p>
+                                <P>Ingredientes: Água e castanhas de caju.</p>
+                            </div>
+                        </div> <!-- /.tab content -->
+
+                    </div><!--/.product-tab-->
+
+                    <div style="clear:both"></div>
+
+                </div><!--/ right column end -->
+
+            </div>
+            <!--/.row-->
+
+            <div class="row recommended">
+
+                <h1> PRODUTOS RECOMENDADOS </h1>
+
+                <div id="SimilarProductSlider">
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee</a></h4>
+                                <div class="price"> <span>R$8,90</span> </div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee</a></h4>
+                                <div class="price"> <span>R$8,90</span> </div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg" alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee</a></h4>
+                                <div class="price"> <span>R$8,90</span></div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee</a></h4>
+                                <div class="price"> <span>R$8,90</span></div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee</a></h4>
+                                <div class="price"> <span>R$8,90</span> </div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee</a></h4>
+                                <div class="price"> <span>R$8,90 </span> </div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee </a></h4>
+                                <div class="price"> <span>R$8,90</span> </div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+
+                    <div class="item">
+                        <div class="product"> <a class="product-image" > <img src="images/product/3.jpg"  alt="img"> </a>
+                            <div class="description">
+                                <h4><a href="san-remo-spaghetti">Snack Tee </a></h4>
+                                <div class="price"> <span>R$8,90</span> </div>
+                            </div>
+                        </div>
+                    </div><!--/.item-->
+                </div><!--/.SimilarProductSlider-->
+            </div>  <!--/.recommended--> 
+
+
+            <div style="clear:both"></div>
+
+
+        </div> <!-- /main-container -->
+
+        <div class="gap"></div>
+
     
-        <ul class="breadcrumbs">
+    
+{#        <ul class="breadcrumbs">
             <div class="container">
                 <li class="home">
                     <a href="{{ path('_loja_index') }}" title="Home"><img src="{{ asset('bundles/nutrividaloja/loja/images/home.png') }}" alt=""/></a>&nbsp;&nbsp;
@@ -98,6 +254,11 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div>#}
+
+            <script src="{{ asset('bundles/nutrividaloja/loja/assets/js/smoothproducts.min.js') }}"></script>
+        <script src="{{ asset('bundles/nutrividaloja/loja/assets/js/smoothproducts-thumb.min.js') }}"></script>
+
+
 {% endblock %}
 
