--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/header.html.twig
@@ -18,12 +18,12 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="{{ path("_loja_cliente") }}" data-toggle="modal" data-target="#ModalLogin">
+                                <a href="{{ path("_loja_cliente") }}" >
                                     <span class="hidden-xs">login</span> <i class="glyphicon glyphicon-log-in hide visible-xs"></i>
                                 </a>
                             </li>
                             <li class="hidden-xs">
-                                <a href="{{ path("_loja_cliente") }}" data-toggle="modal" data-target="#ModalSignup">criar conta</a>
+                                <a href="{{ path("_loja_cadastro_cliente") }}" >criar conta</a>
                             </li>
                         </ul>
                     </div>
