--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/login.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Cliente/login.html.twig
@@ -1,54 +1,65 @@
 {% extends "NutrividaLojaBundle:Loja:layout.html.twig" %}
+{% form_theme form 'NutrividaLojaBundle:Loja/Form:fields.html.twig' %}
 {% block title %}Nutrivida Tramandaí RS{% endblock %}
-
-{% block head %}
-{% endblock %}
 
 
 {% block content %}
-        <ul class="breadcrumbs">
-            <div class="container">
-                <li class="home">
-                    <a href="{{ path('_loja_index') }}" title="Go to Home Page"><img src="{{ asset('bundles/nutrividaloja/loja/images/home.png') }}" alt=""/></a>&nbsp;&nbsp;
-                    <span>&gt;</span>&nbsp;
-                </li>
-                <li class="home">
-                    NutriVida&nbsp; 
-                    <span>&gt;</span>
-                </li>
-                <li class="home">
-                    <span class="red"> &nbsp;Cliente&nbsp;</span>
-                </li>
+    <div class="container main-container headerOffset">
+        <div class="row">
+            <div class="breadcrumbDiv col-lg-12">
+                <ul class="breadcrumb">
+                    <li> <a href="{{ path('_loja_index') }}">Home</a> </li>
+                    <li class="active"> Cliente </li>
+                </ul>
             </div>
-        </ul>
-        <div class="contact">
-            <div class="container">
-               <div class="account_grid">
-                    <div class="col-md-6 login-left">
-                          <h3>NOVO CLIENTE</h3>
-                          <p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
-                          <a class="acount-btn" href="{{ path('_loja_cadastro_cliente') }}">Cadastre-se</a>
-                    </div>
-                    <div class="col-md-6 login-right">
-                        <h3>JÁ TENHO CADASTRO</h3>
-                        <p>Se você tem uma conta conosco, por favor faça o login.</p>
-                        <p>{{ error }}</p>
-                        <form method="POST" action="{{ path('_login_cliente_check') }}">
-                            <div>
-                                <span>E-mail<label>*</label></span>
-                                <input value="{{ last_username }}" type="text" name="_username" placeholder="E-mail" /> 
+        </div>
+        <div class="row">
+            <div class="col-lg-9 col-md-9 col-sm-7">
+                <h1 class="section-title-inner"><span><i class="fa fa-lock"></i> Autenticação</span></h1>
+                <div class="row userInfo">
+
+                    <div class="col-xs-12 col-sm-6">
+                        <h2 class="block-title-2"> NOVO CLIENTE </h2>
+                        <form method="POST" id="form-cadastro" action="{{ path('_loja_cadastro_cliente') }}"> 
+                            {{ form_row(form.nome) }}
+                            {{ form_row(form.telefone) }}
+                            {{ form_row(form.email) }}
+                            {{ form_row(form.senha.first) }}
+                            {{ form_row(form.senha.second) }}
+                            <div class="form-group ">
+                                <p class=" clearfix">
+                                    <input type="checkbox" id="news" name="news" value="1">
+                                    <label for="news" >Receber ofertas de produtos Nutrivida!</label>
+                                </p>
                             </div>
-                            <div>
-                                <span>Senha<label>*</label></span>
-                                <input type="password" name="_password" placeholder="Senha" /> 
-                            </div>
-                            <a class="forgot" href="#">Esqueceu a senha?</a>
-                            <input type="submit" value="Login">
+
+                            <button class="btn   btn-primary" type="submit"><i class="fa fa-user"></i> Cadastrar</button>
+                            {{ form_row(form._token) }}
+                            {{ form_errors(form) }}
                         </form>
-                    </div>	
-                    <div class="clearfix"> </div>
                     </div>
-             </div>
-          </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <h2 class="block-title-2"><span>Já sou Cadastrado?</span></h2>
+                        <form method="POST" action="{{ path('_login_cliente_check') }}">
+                            <div class="form-group">
+                                <label>E-mail*</label>
+                                <input class="form-control" value="{{ last_username }}" type="text" name="_username" placeholder="E-mail" /> 
+                            </div>
+                            <div class="form-group">
+                                <label>Senha*</label>
+                                <input class="form-control" type="password" name="_password" placeholder="Senha" /> 
+                            </div>
+                            <button class="btn   btn-primary" type="submit"><i class="fa fa-user"></i> Entrar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-5"> </div>
+        </div>
+        <div style="clear:both"></div>
+    </div>
+        <div class="gap"> </div>
+
 
 {% endblock %}
+
