--- a/src/Nutrivida/LojaBundle/Resources/views/Loja/Form/fields.html.twig
+++ b/src/Nutrivida/LojaBundle/Resources/views/Loja/Form/fields.html.twig
@@ -1,12 +1,13 @@
 
 {% block form_row %}
-    <div>
-        <span>{{ form_label(form) }}
+    <div class="form-group">
+        <label>
+            {{ form_label(form) }}
             {% if required %}
-                <label>*</label>
+                <span class="asterisk">*</span>
             {% endif %}
-        </span>
-        {{ form_widget(form) }}
+        </label>
+        {{ form_widget(form, { 'attr': {'class': 'form-control'} }) }}
         {{ form_errors(form) }}
     </div>
 
